# Ethervoid

./: .gitattributes  .gitignore  Cargo.toml  config.json  config.ron  justfile  license.md  readme.md  style_guide.md  todo.md
.cargo/: config.toml
assets/: evoid-pallete.ase
cores/default/attacks/: test.rhai
cores/default/behavior/attacks/: test.rhai  test2.rhai
cores/default/behavior/movement/: move_towards_player.rhai
cores/default/enemies/: broken.ron  test.json  test.ron
cores/default/goals/attacks/: test.lua  test.rhai  test2.lua  test2.rhai
cores/default/goals/movement/: move_towards_player.lua  move_towards_player.rhai  test_mod.rhai
cores/default/lang/: en.ftl  en.ron
cores/default/maps/: test.json  test.ron  test2.ron
cores/default/npcs/: test.ron
cores/default/scripts/attacks/: test2.rhai
cores/default/scripts/goals/: module_test.lua  move_towards_player.lua  test.lua  test2.lua  wander.lua
cores/default/scripts/misc/: module_test.lua
cores/default/scripts/movement/: move_towards_player.rhai
cores/default/sprites/: appl.avif
src/: config.rs  cores.rs  gameplay.rs  input.rs  main.rs  menu.rs  utils.rs
src/cores/: audio.rs  enemytype.rs  goal.rs  lang.rs  map.rs  npctype.rs  script.rs  textures.rs
src/cores/goal/: engine.rs
src/data/: config.rs  save.rs
src/data/config/: keymap.rs
src/gameplay/: combat.rs  doors.rs  draw.rs  ecs.rs  enemy.rs  entity.rs  mod.rs  movement.rs  npc.rs  paused.rs  player.rs
src/gameplay/builders/: enemybuilder.rs  mapbuilder.rs  mod.rs
src/gameplay/cores/: attack.rs  attackscript.rs  audio.rs  behavior.rs  enemytype.rs  map.rs  mod.rs  npctype.rs  textures.rs
src/gameplay/draw/: downscale.rs  mod.rs  process.rs  render.rs  texturedentity.rs  texturedobj.rs  textures.rs  ui.rs
src/gameplay/ecs/: behavior.rs  health.rs  mod.rs  obj.rs  position.rs  sprite.rs
src/gameplay/ecs/behavior/: goal.rs  player.rs  script.rs  wander.rs
src/gameplay/npc/: messages.rs
src/menu/: dialogue.rs  main.rs  mod.rs  pause.rs  ui.rs
src/utils/: config.rs  error.rs  input_buffer.rs  logger.rs  lua.rs  mod.rs  resources.rs  tup_vec.rs
src/utils/lua/: instance.rs
src/utils/resources/: audio.rs  config.rs  goals.rs  langs.rs  maps.rs  save.rs  script_vals.rs  scripts.rs  textures.rs
