[package]
name = "ethervoid"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4", features = ["glam-serde"] }
stecs = "0.1"
walkdir = "2.5"
ahash = "0.8"
parking_lot = "0.12"

tracing = "0.1"
tracing-subscriber = "0.3"

kira = "0.10"
imageproc = "0.25"
image = { version = "0.25", features = ["avif-native"] }
fast_image_resize = { version = "5.1", features = ["image", "rayon"] }

rhai = { version = "1.21", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.10"

raywoke = { version = "0.2", features = ["glam"] }

[profile.dev.package."*"]
opt-level = 3

# TODO: Test to see if these actually improve performance
[profile.release]
codegen-units = 1
lto = "fat"
