[package]
name = "ethervoid"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { version = "0.4", features = ["glam-serde"] }
hashbrown = { version = "0.15", features = ["serde"] }
stecs = "0.1"
walkdir = "2.5"
parking_lot = "0.12"

tracing = "0.1"
tracing-subscriber = "0.3"

kira = "0.10"
imageproc = "0.25"
image = "0.25"
fast_image_resize = { version = "5.1", features = ["image", "rayon"] }

mlua = { version = "0.10.5", features = ["luau-jit", "send"]}
serde = { version = "1.0", features = ["derive"] }
unic-langid = "0.9"
fluent = "0.17"
ron = "0.10"

raywoke = { version = "0.3", features = ["glam"] }

[profile.dev.package."*"]
opt-level = 3

# TODO: Test to see if these actually improve performance
[profile.release]
codegen-units = 1
lto = "fat"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
semicolon_if_nothing_returned = "allow"
tabs_in_doc_comments = "allow"
wildcard_imports = "allow"
